fixd Remember Me checkmark alignment

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -12,3 +12,7 @@ $btn-default-color: white;
 .navbar-brand {
 	font-weight: bold;
 }
+
+.checkbox input[type="checkbox"] {
+  margin-left: 0;
+}
